# commitwriter

./: README.md  generate_commit_message.py  generate_docstring.py  pre-commit-hook.sh  pyproject.toml  requirements.txt
autocommit/: __init__.py  main.py
